Fixed some spacing issues between empty and non-empty lists

--- a/lodo/shared/src/main/resources/web/css/lodo.css
+++ b/lodo/shared/src/main/resources/web/css/lodo.css
@@ -15,17 +15,20 @@ body {
     color: #000;
 }
 .panel-heading {
-    padding: 5px;
-    padding-right: 0px;
+    padding: 2px 0px 2px 5px;
     margin-right: 0px;
 }
 .panel-body {
-    padding: 2px 0px 2px 10px;
+    padding: 2px 0px 2px 5px;
     margin-right: 0px;
 }
 
+.panel.item > .panel-body {
+    margin-left: 0px;
+}
+
 .panel.item-list > .panel-body {
-    margin-left: 10px;
+    margin-left: 11px;
     padding-left: 0px;
     border-left: 1px solid #999;
 }
